--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,39 @@
+# Virtual Environment
 /venv
+venv/
+env/
+.venv/
+
+# Environment variables
+.env
+.env.local
+.env.development
+.env.production
+
+# Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Distribution / packaging
+dist/
+build/
+*.egg-info/
+
+# Frontend
+frontend/node_modules/
+frontend/dist/
+frontend/.vite/
+
+# IDE files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
