--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,9 @@ python-dotenv==1.0.0
 pydantic==2.5.1
 openai==1.12.0
 google-generativeai==0.3.2
+
+# Testing dependencies
+pytest==7.4.0
+pytest-asyncio==0.21.1
+httpx==0.25.0
+requests==2.31.0
