--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
-fastapi==0.104.1
+fastapi>=0.109.0
 uvicorn==0.24.0
 python-dotenv==1.0.0
-pydantic==2.5.1
-openai==1.12.0
-google-generativeai==0.3.2
+pydantic
+openai>=1.72.0
+google-generativeai
+
+# Agent dependencies
+mcp[cli]>=1.6.0
 
 # Testing dependencies
 pytest==7.4.0
 pytest-asyncio==0.21.1
-httpx==0.25.0
-requests==2.31.0
+httpx
+requests>=2.32.3  # Updated to meet smolagents requirement
