--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,13 @@ google-generativeai
 
 # Agent dependencies
 mcp[cli]>=1.6.0
+langchain-mcp-adapters
+langchain-openai
+langchain
+langgraph
 
 # Testing dependencies
 pytest==7.4.0
 pytest-asyncio==0.21.1
 httpx
-requests>=2.32.3  # Updated to meet smolagents requirement
+requests>=2.32.3
