feat: migrate Google Gemini provider to new google-genai SDK with streaming support
- Updated requirements.txt to use google-genai instead of google-generativeai
- Refactored GoogleProvider to use the new google-genai Client and async_client APIs
- Implemented streaming completions using generate_content_stream from the async client
- Updated provider initialization and completion logic for new SDK patterns
- Added detailed logging for provider selection, initialization, and error handling
- Improved debugging output for easier diagnosis of integration issues
- Cleaned up obsolete code and ensured compatibility with FastAPI streaming endpoints

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ uvicorn==0.24.0
 python-dotenv==1.0.0
 pydantic
 openai>=1.72.0
-google-generativeai
+google-genai
 
 # Agent dependencies
 mcp[cli]>=1.6.0
