--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.511.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.3.0",
     "tailwind-scrollbar": "^4.0.2",
